test/spec_vectors/i32/fail/module_54.wat
(module (memory 1) (func $type-binary-2nd-operand-empty-in-store (i32.store (i32.const 1) (i32.add) (i32.const 0))))